# Project_sem_2

./: CMakeLists.txt  Circle.cpp  Circle.hpp  Enemy.cpp  Enemy.hpp  Player.cpp  Player.hpp  README.md  main.cpp
cpp/: Player.cpp
includes/: Circle.hpp  Enemy.hpp  EnemyManager.hpp  Player.hpp  Timer.hpp
src/: Circle.cpp  Enemy.cpp  EnemyManager.cpp  Player.cpp  Timer.cpp  main.cpp
